Fix wbw choice wrapping to newlines

--- a/orders/static/orders/style.css
+++ b/orders/static/orders/style.css
@@ -91,3 +91,11 @@ span.oldprice {
     color: gray;
     text-decoration: line-through;
 }
+
+.wbw-preference {
+    display: inline-block
+}
+
+.wbw-preference > li {
+    float: none;
+}
